--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>WebAuthn Demo</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="/jquery-3.6.1.min.js"></script>
 </head>
 
 <body>
 
   Username:
   <br>
-  <input type="text" name="username" id="email" placeholder="i.e. foo@bar.com">
+  <input type="text" name="username" id="email" placeholder="i.e. foo@bar.com" value="foo@bar.com">
   <br>
   <br>
   <button onclick="registerUser()">Register</button>
@@ -65,7 +65,7 @@
               credentialCreationOptions.publicKey.excludeCredentials[i].id = bufferDecode(credentialCreationOptions.publicKey.excludeCredentials[i].id);
             }
           }
-
+          console.log("reg.begin", credentialCreationOptions)
           return navigator.credentials.create({
             publicKey: credentialCreationOptions.publicKey
           })
