--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     // Base64 to ArrayBuffer
     function bufferDecode(value) {
-      return Uint8Array.from(atob(value), c => c.charCodeAt(0));
+      return Uint8Array.from(atob(value.replace(/-/g, "\+").replace(/_/g, "\/")), c => c.charCodeAt(0));
     }
 
     // ArrayBuffer to URLBase64
